src/snapshots/afrotd__parser__tests__rule_6.3.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 1
title: Hinter der neutralen Zone
text: "\ta) Wenn ein Scrimmage Kick die neutrale Zone nicht überquert, bleibt er im Spiel. Alle Spieler können den Ball hinter der neutralen Zone fangen oder recovern und advancen (A.R. 6.3.1.I bis 6.3.1.III).\n\tb) Das Blocken eines Scrimmage Kicks durch einen Gegner des Kicking Teams, der sich nicht mehr als drei Meter jenseits der neutralen Zone befindet, wird so geregelt, als hätte es sich innerhalb oder hinter der neutralen Zone ereignet (Regel 2.11.5)."
interpretations: []
