src/snapshots/afrotd__parser__tests__rule_6.3.12.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 12
title: Spieler im Aus
text: "Ein Team A-Spieler, der während eines Scrimmage Kick-Spieles ins Aus geht, darf es während des laufenden Downs nicht wieder betreten (Ausnahme: Das gilt nicht für einen Team A-Spieler, der ins Aus geblockt wurde und sofort versucht, wieder ins Feld zu gelangen). Strafe: Live Ball Foul. 5 Meter vom Previous Spot oder, wenn der Scrimmage Kick die neutrale Zone überquert, 5 Meter von dem Punkt, an dem der anschließende Dead Ball zu Team B gehört [S19]."
interpretations: []
