src/snapshots/afrotd__parser__tests__rule_6.3.13.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 13
title: Fouls durch das Kicking Team
text: "Strafen für alle Fouls durch das Kicking Team, außer der Behinderung beim Fangen eines Kicks (Regel 6.4) während eines Scrimmage Kick-Spieles, bei dem der Kick die neutrale Zone überquert (ausgenommen Fieldgoalversuche), können gemäß den Regeln entweder vom Previous Spot als Basic Spot mit der Wiederholung des Downs (Ausnahme: die Strafoption für ein Foul in Team A’s Endzone ist ein Safety) oder von dem Punkt durchgeführt werden, an dem der anschließende Dead Ball zu Team B gehört, je nach Wahl von Team B (A.R. 6.3.13.I bis 6.3.13.III)."
interpretations: []
