src/snapshots/afrotd__parser__tests__rule_6.3.14.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 6
  - 3
  - 14
title: Defense Linemen bei Scrimmage Kicks
text: "\ta) Wenn Team A beim Snap in einer Scrimmage Kick Formation aufgestellt ist und der Snapper sich nicht am Ende der Scrimmage Line befindet, muss jeder Team B-Spieler, der sich innerhalb eines Meters an seiner Scrimmage Line befindet, vollständig außerhalb des Körperrahmens des Snappers aufgestellt sein (A.R. 6.3.14.I und 6.3.14.II).\n\tb) Wenn Team A sich in einer Formation zu einem Place Kick (Fieldgoal oder Try) aufgestellt hat, ist es drei Team B-Spielern verboten, sich an ihrer Seite der Scrimmage Line innerhalb der Blockzone Schulter an Schulter aufzustellen, nach dem Snap mit primärem Kontakt gegen einen einzelnen Team A-Spieler gemeinsam vorwärts zu gehen (A.R. 6.3.14.III und 6.3.14.IV). Strafe: Live Ball Foul. 5 Meter vom Previous Spot [S19]."
interpretations: []
